<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    android:padding="10dp"
    tools:context=".RegisterActivity">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:orientation="vertical">

        <EditText
            android:id="@+id/fn"
            android:padding="10dp"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_round"
            android:layout_marginTop="10dp"
            android:textSize="20dp"

            android:hint="@string/edittext_fn"
            />
        <EditText
            android:id="@+id/ln"
            android:padding="10dp"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_round"
            android:layout_marginTop="10dp"
            android:textSize="20dp"

            android:hint="@string/edittext_ln"
            />
        <EditText
            android:id="@+id/address"
            android:padding="10dp"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_round"
            android:layout_marginTop="10dp"
            android:textSize="20dp"

            android:hint="@string/edittext_ad"
            />
        <EditText
            android:id="@+id/pn"
            android:padding="10dp"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_round"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:textSize="20dp"
            android:hint="@string/edittext_pn"
            />
        <EditText
            android:id="@+id/email"
            android:padding="10dp"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_round"
            android:layout_marginTop="10dp"
            android:textSize="20dp"

            android:hint="@string/edittext_em"
            />
        <EditText

            android:id="@+id/us"
            android:padding="10dp"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_round"
            android:layout_marginTop="10dp"
            android:textSize="20dp"

            android:hint="@string/edittext_us"
            />
        <EditText
            android:id="@+id/pass"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_round"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:padding="10dp"
            android:hint="@string/edittext_pass"
            />

                <Button
                    android:id="@+id/regbutton"
                    android:padding="10dp"
                    android:layout_gravity="center"
                   android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_round"
                    android:text="Register"
                    android:textStyle="bold"
                    android:textSize="20dp"

                    />


        </LinearLayout>







</ScrollView>