<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="4"
        android:layout_marginTop="90dp"
        android:gravity="center">

        <ImageView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/policeman"
            />



        <EditText
            android:layout_weight="1"
            android:id="@+id/etusername"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_round"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/user"
            android:textSize="20sp"
            android:textStyle="bold"
            android:hint="@string/edittext_us"

            />
        <EditText
            android:layout_weight="1"
            android:id="@+id/etpassword"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/pass"
            android:background="@drawable/edit_round"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:hint="@string/edittext_2"

            />
        <Button
            android:layout_weight="1"
            android:id="@+id/blogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_round"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:hint="@string/button_1"
            />




    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="50dp"

        >

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Didn't Account "
            android:textSize="20dp"
            android:textColor="#171819"

            />
        <TextView
            android:layout_weight="1"
            android:id="@+id/tvregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:hint="@string/textView1"

            android:background="@drawable/edit_round"
            android:textStyle="bold"
            android:textSize="20dp"
            />

    </LinearLayout>





</LinearLayout>









